# ipbd-prak-mandiri-hot1

./: README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/routes/: blog.py  mahasiswa.py
app/services/: blog_service.py  mahasiswa_service.py
db/: init_db.py  session.py
models/: blog.py  mahasiswa.py
schemas/: blog.py  mahasiswa.py
utils/: auth.py
