[project]
name = "l0224042-a-handson-1-ipdb"
version = "0.1.0"
description = ""
authors = [
    {name = "fatihnabani",email = "fadzakin@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
